--- a/srcs/requirements/nginx/index.html
+++ b/srcs/requirements/nginx/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
-<html manifest="site.manifest">
+<html lang="en">
 <head>
-	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<link rel="apple-touch-icon" href="earth-folder.png">
-	<link rel="apple-touch-icon-precomposed" href="earth-folder.png">
-	<link rel="apple-touch-startup-image" href="earth-folder.png" />
-	
-	<style type="text/css">
-		#main{
-			width:900px;
-			margin:auto;
-		}
-	</style>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sample file for testing</title>
+<META NAME="robots" CONTENT="noindex,nofollow">
 </head>
 <body>
-	<div id="main">
-		<h1>Cette page est accessible hors ligne</h1>
-		<p>Elle possède une icone d'application pour les smartphones.</p>
-		<img src="earth-folder.png" />
-	</div>
+<a href="https://www.freetestdata.com/">Visit Free Test Data for more sample file sizes</a>
+<h1>FREE TEST DATA</h1>
+<br>
+<h2>Sample HTML File</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et odio tempor, venenatis leo at, feugiat mauris.</p>
+<ul>
+<li>Suspendisse et odio tempor, venenatis leo at, feugiat mauris</li>
+<li>lobortis et tortor nec, viverra pellentesque quam. </li>
+<li>Curabitur purus felis, iaculis vitae nulla id, efficitur feugiat libero.</li>
+<li>Duis ornare ex sed nisl sollicitudin sollicitudin. In luctus gravida scelerisque</li>
+<li>Suspendisse et odio tempor, venenatis leo at, feugiat mauris</li>
+<li>lobortis et tortor nec, viverra pellentesque quam. </li>
+<li>roin venenatis massa eu turpis eleifend convallis. Quisque vel eleifend magna. In arcu turpis,</li>
+<li>Curabitur purus felis, iaculis vitae nulla id, efficitur feugiat libero.</li>
+<li>Duis ornare ex sed nisl sollicitudin sollicitudin. In luctus gravida scelerisque</li>
+</ul>
+<p>Vestibulum ut diam magna. Maecenas ut interdum ante, vel volutpat nibh</p>
+<ol>
+<li>Curabitur purus felis, iaculis vitae nulla id, efficitur feugiat libero.</li>
+<li>Duis ornare ex sed nisl sollicitudin sollicitudin. In luctus gravida scelerisque</li>
+<li>Suspendisse et odio tempor, venenatis leo at, feugiat mauris</li>
+<li>Curabitur purus felis, iaculis vitae nulla id, efficitur feugiat libero.</li>
+<li>Duis ornare ex sed nisl sollicitudin sollicitudin. In luctus gravida scelerisque</li>
+<li>Suspendisse et odio tempor, venenatis leo at, feugiat mauris</li>
+<li>lobortis et tortor nec, viverra pellentesque quam. </li>
+<li>roin venenatis massa eu turpis eleifend convallis. Quisque vel eleifend magna. In arcu turpis,</li>
+<li>lobortis et tortor nec, viverra pellentesque quam. </li>
+<li>roin venenatis massa eu turpis eleifend convallis. Quisque vel eleifend magna. In arcu turpis,</li>
+</ol>
 </body>
-
 </html>
